...
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Lorem Ipsum"
                    android:id="@+id/home_item_name"
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

...
