...
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:padding="8dp"
                        android:src="@drawable/ic_file_attachment" />

                    <EditText
                        android:id="@+id/message_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/message_attachments_button"
                        android:background="@null"
                        android:fontFamily="sans-serif-light"
...

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:visibility="invisible"
                android:layout_centerVertical="true"
                android:id="@+id/message_fab"
                style="@style/BasicFloatingActionButton"
                app:fabSize="mini"
                android:src="@drawable/ic_content_send"
                app:backgroundTint="@color/basicFABColor"
                android:layout_alignParentEnd="true" />

...
