...
    <string name="new_message">Add friends to conversation</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search for your friends</string>

    <!-- Home -->
    <string name="home_tabs_chats">Chats</string>
    <string name="home_tabs_friends">Friends</string>
    <string name="home_search">Search for something</string>

    <!-- Drawer -->
    <string name="drawer_chats">Chats</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_settings">Settings</string>
...

    <!-- Call -->
    <string name="call_is_calling">is calling you</string>
    <string name="call_input_message">Message</string>
    <string name="call_reject_with_message">Reject with message</string>
    <string name="call_answer">ANSWER</string>
    <string name="call_decline">DECLINE</string>

    <!-- Other -->
    <string name="action_mode_selected_single">1 selected conversation</string>
    <string name="action_mode_selected_multi">selected conversations</string>
    <string name="files_send_title">Files sent by</string>

...
