...
        <TextView
            android:id="@+id/home_friends_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="Call"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_friends_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
